# a2dhs

./: .clang-format  .gitignore  README.md  export_presets.cfg  project.godot
.import/: 00_PG_0011_-4.png-0617c3d3e0d4e3ac2fab329047b82e04.md5  00_PG_0011_-4.png-0617c3d3e0d4e3ac2fab329047b82e04.stex  01_PG_0009_-3.png-e7ecec6d64ce803fb67e55c56cf870e9.md5  01_PG_0009_-3.png-e7ecec6d64ce803fb67e55c56cf870e9.stex  02_PG_0008_-2.png-8c5ab34c61e164fcd9d538d3cc1110bc.stex  03_PG_0007_-1.png-b0083407dca40d8460db497b51aeb99d.stex  04_PG_0005_+1.png-f413ab3aebd58a32c194fec73e2584ca.stex  06_PG_0004_+2.png-97fbecb3d1626d6bcaf40f629bcaddfe.md5  06_PG_0004_+2.png-97fbecb3d1626d6bcaf40f629bcaddfe.stex  07_PG_0003_+3.png-a6375f9fc4c14cd86133c52b2076fbf8.md5  07_PG_0003_+3.png-a6375f9fc4c14cd86133c52b2076fbf8.stex  08_PG_0001_+4.png-8afcf9625a197b6408bf2c4937bcbf93.md5  08_PG_0001_+4.png-8afcf9625a197b6408bf2c4937bcbf93.stex  11_PG_0005_+1.png-a40e0008a934f8c3de6f8c4fcc8196a3.md5  12_PG_0007_-1.png-6e4bdf8377e9f407cec3c29e0c99d7f2.md5  13_PG_0008_-2.png-7597b23edcb5ac2810d0203e442e359f.md5  Footstep2.wav-0703892c693da5ae6e85964e09fdddfd.md5  Footstep2.wav-0703892c693da5ae6e85964e09fdddfd.sample  Light.png-b6e34bddc7c4cee10f417b16e37c0a8a.md5  Light.png-b6e34bddc7c4cee10f417b16e37c0a8a.stex  LightTexture.png-b279570f5fb6f5ea73ac7d09b570935c.md5  LightTexture.png-b279570f5fb6f5ea73ac7d09b570935c.stex  PgMainLight2.png-73db09521a1ecbc6f25ab908eb3f6833.md5  PgMainLight2.png-73db09521a1ecbc6f25ab908eb3f6833.stex  PiGigi_Idle_24x24_Frames_V.1-1.png-7b2b04436688e5443d1429a415eb1311.md5  PiGigi_Idle_24x24_Frames_V.1-1.png-7b2b04436688e5443d1429a415eb1311.stex  PiGigi_Idle_24x24_Frames_V.1-10.png-28de35fdd15f87c3d2ce01ed27aea4a9.md5  PiGigi_Idle_24x24_Frames_V.1-10.png-437e21bc90048c83262b8323387d8689.stex  PiGigi_Idle_24x24_Frames_V.1-11.png-7489e75f4a016b09dac90184250dfb0f.md5  PiGigi_Idle_24x24_Frames_V.1-11.png-f41a3566deabc3993639e97f7c0a455d.stex  PiGigi_Idle_24x24_Frames_V.1-12.png-ced939858cf860945edea6e639487cab.md5  PiGigi_Idle_24x24_Frames_V.1-12.png-ced939858cf860945edea6e639487cab.stex  PiGigi_Idle_24x24_Frames_V.1-13.png-3c0b8c8b9c050e75b4fc84ad112d54ec.md5  PiGigi_Idle_24x24_Frames_V.1-13.png-3c0b8c8b9c050e75b4fc84ad112d54ec.stex  PiGigi_Idle_24x24_Frames_V.1-2.png-abbfc5485dc2745de204c1b8a8e434aa.md5  PiGigi_Idle_24x24_Frames_V.1-2.png-abbfc5485dc2745de204c1b8a8e434aa.stex  PiGigi_Idle_24x24_Frames_V.1-3.png-5af5884a4b57b68016fa378a133c0dee.md5  PiGigi_Idle_24x24_Frames_V.1-3.png-dc70248204d07f87101aa0e9b9b7d9c0.stex  PiGigi_Idle_24x24_Frames_V.1-4.png-142429f590d026ac9bbe21781476d104.md5  PiGigi_Idle_24x24_Frames_V.1-4.png-e79609ea480a679bf50fd4a9c83301b3.stex  (+92 more)
Arts/: LightTexture.png.import  bg.png.import  pg-32.png.import
Assets/: RedEyes.png.import  battery_icon.png.import  dialogues.json  energy-icon-32.png.import  hud-bubble.png.import  map builder tile_01.png.import  pg-32.png.import  (+2 more)
CoreGame/CoreGame/: CMakeLists.txt
CoreGame/CoreGame/include/: CoreMath.h  DialogueTrigger.h  HUD.h  LightFilter.h  Main.h  Map.h  Mob.h  Player.h  RedEyesSpawner.h  Timer.h  Torch.h  VisibilityPolygon.h
CoreGame/CoreGame/src/: GodotLibrary.cpp  HUD.cpp  LightFilter.cpp  Main.cpp  Map.cpp  Player.cpp  RedEyesSpawner.cpp  Torch.cpp  VisibilityPolygon.cpp
CoreGame/CoreGame/tests/: CMakeLists.txt  test_Timer.cpp
(+92 files in other folders)
